# MRZ-s-ai-agent

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Makefile  PROJECT_STORY.md  README.md  USAGE.md  docker-compose.yml  fill-payload.ps1  pom.xml
reactor-tool/: .env_template  .gitignore  Dockerfile  README.md  pyproject.toml  server.py  start.ps1  start.sh
reactor-tool/reactor_tool/api/: __init__.py  file_manage.py  tool.py
reactor-tool/reactor_tool/config/: __init__.py  env.py
reactor-tool/reactor_tool/db/: db_engine.py  file_table_op.py
reactor-tool/reactor_tool/model/: protocal.py
reactor-tool/reactor_tool/prompt/: code_interpreter.yaml  deepsearch.yaml  report.yaml
reactor-tool/reactor_tool/tool/: auto_analysis.py  ci_agent.py  code_interpreter.py  code_interpreter_policy.py  cpp_worker.py  deepsearch.py  image_generation.py  nl2sql.py  plan_sop.py  report.py  script_runner.py  script_runtime.py  web_fetcher.py
reactor-tool/reactor_tool/util/: file_util.py  llm_util.py  log_util.py  middleware_util.py  prompt_util.py  qdrant_utils.py  report_file_util.py
reactor-tool/tests/: test_code_interpreter_api.py  test_code_interpreter_permissions.py  test_deepsearch_engine_selection.py  test_deepsearch_llm_config.py  test_embedding_proxy.py  test_es_client_auth.py  test_file_manage_api.py  test_image_generation.py  test_image_generation_api.py  test_llm_util.py  test_mainline_routes.py  test_mrag_api.py  test_mrag_document_processor.py  test_mrag_document_routes.py  test_mrag_image_retriever.py  test_mrag_kb_doc_store.py  test_mrag_query_processor.py  test_mrag_rerank.py  test_mrag_splitter.py  test_mrag_vlm.py  test_plan_sop.py  test_report_file_util.py  test_runtime_env.py  test_script_runner.py  test_search_engine.py  test_table_rag_shared_config.py  test_web_fetch_api.py  test_web_fetcher.py
services/agent-api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/agent-api/agent_api/: __init__.py  main.py  runtime.py  settings.py
services/agent-api/alembic/: env.py
services/agent-api/scripts/: docker-entrypoint.sh  seed.py
services/agent-api/tests/: __init__.py  test_admin_routes.py  test_agent_core.py  test_agent_sse_route.py  test_app_settings.py  test_conversation_history_route.py  test_data_chat_route.py  test_file_upload_route.py  test_runtime_cancellation.py  test_runtime_sql_ledger.py  test_sql_ledger.py  test_tool_runtime_client.py  test_visitor_route.py
services/cpp-worker/: CMakeLists.txt  README.md
services/cpp-worker/src/: main.cpp
(+1067 files in other folders)
