[project]
name = "reactor-agent-api"
version = "0.1.0"
description = "Python agent orchestration service for the Reactor Agent mainline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.90.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.30",
    "sse-starlette>=2.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_api"]
